--- a/S02.03-Exercise-Polish/app/src/main/res/layout/activity_forecast.xml
+++ b/S02.03-Exercise-Polish/app/src/main/res/layout/activity_forecast.xml
@@ -28,16 +28,30 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:textSize="20sp" />
+
     </ScrollView>
+    <TextView
+        android:id="@+id/error_message_view"
+        android:text="@string/error_message"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <!--TODO (2) Add a TextView that you will show the user if there is an error loading content-->
-    <!--TODO (3) Make the width and the height wrap_content-->
-    <!--TODO (4) Give the TextView a default error message stating that an error occurred (use strings.xml)-->
-    <!--TODO (5) Set the default visibility of the TextView to invisible-->
+    <ProgressBar
+        android:id="@+id/progress_indicator"
+        android:layout_width="42dp"
+        android:layout_gravity="center"
+        android:layout_height="42dp"
+        android:visibility="invisible" />
 
-    <!--TODO (12) Add a ProgressBar to show the user content is loading-->
-    <!--TODO (13) Make the width and height of the ProgressBar 42dp-->
-    <!--TODO (14) Set the layout_gravity of the ProgressBar to center-->
-    <!--TODO (15) Set the default visibility of the ProgressBar to invisible-->
+    <!--COMPLETE (2) Add a TextView that you will show the user if there is an error loading content-->
+    <!--COMPLETE (3) Make the width and the height wrap_content-->
+    <!--COMPLETE (4) Give the TextView a default error message stating that an error occurred (use strings.xml)-->
+    <!--COMPLETE (5) Set the default visibility of the TextView to invisible-->
+
+    <!--COMPLETE (12) Add a ProgressBar to show the user content is loading-->
+    <!--COMPLETE (13) Make the width and height of the ProgressBar 42dp-->
+    <!--COMPLETE (14) Set the layout_gravity of the ProgressBar to center-->
+    <!--COMPLETE (15) Set the default visibility of the ProgressBar to invisible-->
 
 </FrameLayout>
